<resources>
    <string name="app_name">TestEmart</string>
    <string name="groceries_decs">Buy the pulses like all types of dal,jowar,rice with great offers</string>
    <string name="groceries">All Groceries and Pulses</string>
    <string name="essential">All Home Repair Services</string>
    <string name="recent_search_itle">Your Recent Search</string>
    <string name="productname">ProductName</string>
    <string name="shopname">ShopName</string>
    <string name="your_orders">Your Orders</string>
    <string name="rewards">Rewards</string>
    <string name="emart_wallet">eMart Wallet</string>
    <string name="trending_in_your_location">Trending in Your Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="search_frag">Search</string>
    <string name="tagline">Your needs at Door Step!</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new">Don\'t have an account? Create New</string>
    <string name="default_client_id">873632671549-dl4d922jotr8tt76r9klnj928h2g3hgj.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2822809107846287</string>
    <string name="fb_login_protocol_scheme">fb2822809107846287</string>
    <string name="add_address">Add Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="house_no">House No</string>
    <string name="street_name">Street Name</string>


</resources>
