<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="start"
            android:paddingStart="10sp"
            android:text="Home"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="70sp"
            android:layout_height="5sp"
            android:layout_alignBottom="@id/home_txt"
            android:layout_marginStart="20sp"
            android:background="@drawable/rounded_shape"
            android:fitsSystemWindows="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/loc_img"
            android:gravity="end"
            android:maxLines="1"
            android:text="Bagalkot"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/loc_img"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:layout_marginEnd="10sp"
            android:src="@drawable/location_icon" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/greet_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello, "
            android:textColor="#000000"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ashish"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:foregroundTint="@color/colorPrimary"
                    app:cardElevation="5sp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="200sp"
                            android:layout_height="150sp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/groceries" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="3sp"
                            android:padding="5sp"
                            android:text="@string/groceries"
                            android:textColor="#000000"
                            android:textStyle="bold"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="3sp"
                            android:padding="5sp"
                            android:text="@string/groceries_decs"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="12sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardElevation="5sp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="200sp"
                            android:layout_height="150sp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/essentials" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="3sp"
                            android:padding="5sp"
                            android:text="@string/essential"
                            android:textColor="#000000"
                            android:textStyle="bold"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="3sp"
                            android:padding="5sp"
                            android:text="Hire technicians for repairs such as Electrician,Plumber etc"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="12sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:padding="5sp"
                android:text="@string/recent_search_itle"
                android:textColor="#000000"
                android:textSize="17sp" />

            <View
                android:layout_width="155sp"
                android:layout_height="0.7sp"
                android:layout_marginStart="15sp"
                android:layout_marginBottom="5sp"
                android:background="@drawable/rounded_shape" />

            <include layout="@layout/recent_recycler_fragment" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>